changed controllers tests